--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,8 @@ a.link {
   fill: currentColor;
 }
 
-.adress-nav .link:hover {
+.adress-nav .link:hover,
+.adress-nav .link:focus {
   color: var(--accent-color);
 }
 
@@ -747,24 +748,45 @@ ul {
 
 /* ПОРТФОЛИО: */
 
+.flex-item:hover {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+.flex-item {
+  border: 1px solid #eeeeee;
+}
+
 .flex-item {
   width: calc((100% - 60px) / 3);
 }
 
 .flex-item:nth-child(1) {
   margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .flex-item:nth-child(2) {
   margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.flex-item:nth-child(3) {
+  margin-bottom: 30px;
 }
 
 .flex-item:nth-child(4) {
   margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .flex-item:nth-child(5) {
   margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.flex-item:nth-child(6) {
+  margin-bottom: 30px;
 }
 
 .flex-item:nth-child(7) {
@@ -777,21 +799,30 @@ ul {
 
 .position-portfolio {
   position: relative;
+  overflow: hidden;
 }
 
 .position-portfolio .text {
   position: absolute;
   bottom: 0;
   left: 0;
-  opacity: 0;
+
+  background: rgba(33, 150, 243, 0.9);
+  color: var(--white-text);
+
   width: 100%;
   height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  opacity: 1;
 }
 
 .position-portfolio:hover .text {
-  opacity: 1;
   background: rgba(33, 150, 243, 0.9);
   color: var(--white-text);
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .list-button .item {
@@ -802,8 +833,8 @@ ul {
   display: block;
   padding-left: 24px;
   padding-right: 24px;
-  padding-top: 64px;
-  padding-bottom: 64px;
+  padding-top: 63px;
+  padding-bottom: 63px;
   margin: 0;
   font-size: 18px;
   line-height: 1.56;
@@ -841,8 +872,7 @@ ul {
 
 .portfolio .container {
   width: 1170px;
-  padding-top: 94px;
-  padding-bottom: 94px;
+
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -865,6 +895,10 @@ ul {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
+  border: 0;
+  background: #f5f4fa;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 
 .portfolio .list {
@@ -876,8 +910,8 @@ ul {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  margin-top: 0;
-  margin-bottom: 4px;
+  margin-top: 20px;
+  padding-right: 24px;
   padding-left: 24px;
 }
 
@@ -890,13 +924,50 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 4px;
+  padding-bottom: 20px;
   padding-left: 24px;
+  padding-right: 24px;
 }
 
 .portfolio .text {
   font-weight: normal;
   font-size: 18px;
   line-height: 1.55;
+}
+
+.border {
+  position: relative;
+  padding-bottom: 33px;
+}
+
+.border::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: #2196f3;
+  display: inline-block;
+  width: 100%;
+
+  height: 4px;
+}
+
+.footer-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin-top: 108px;
+  margin-left: 12px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--white-text);
+}
+
+.telegram {
+  fill: var(--white-text);
+  margin-left: 10px;
 }
